--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- 
+`<!-- 
 //////////////////////////////////////////////////////
 
 FREE HTML5 TEMPLATE 
@@ -15,11 +15,11 @@ DESIGNED & DEVELOPED by FREEHTML5.CO
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Light &mdash; A free Responsive HTML5 Template by FREEHTML5.CO</title>
+	<title>RISE &mdash; Rigorous Individualistic Science Education</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-  <meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-  <meta name="author" content="FREEHTML5.CO" />
+	<meta name="description" content="Rigorous Individualistic Science Education" />
+  <meta name="keywords" content="Rigorous Individualistic Science Education" />
+  <meta name="author" content="RISE" />
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -33,7 +33,7 @@ DESIGNED & DEVELOPED by FREEHTML5.CO
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="science.ico">
 
 	<!-- Google Webfont -->
 	<link href='http://fonts.googleapis.com/css?family=Lato:400,300,700|Unica+One' rel='stylesheet' type='text/css'>
@@ -105,7 +105,7 @@ DESIGNED & DEVELOPED by FREEHTML5.CO
 				<div class="container">
 					<div class="row">
 						<div class="col-md-8 col-md-push-4 col-sm-8 col-sm-push-4">
-							<h1 class="fh5co-intro"><span class="fh5co-border"></span>Light is a free responsive HTML5 template using bootstrap released under <a href="https://creativecommons.org/licenses/by/3.0/us/" target="_blank">Creative Commons 3.0</a>. Lovely crafted by <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a></h1>
+							<h1 class="fh5co-intro"><span class="fh5co-border"></span>At RISE, we use to sdfjsdf ablah blah blah</h1>
 						</div>
 					</div>
 					<div class="row">
