--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ DESIGNED & DEVELOPED by FREEHTML5.CO
 		<main role="main">
 
 				<!-- Slider -->
-				<div class="container">
+				<!-- <div class="container">
 					<div class="row">
 						<div class="col-md-8 col-md-push-4 col-sm-8 col-sm-push-4">
 							<h1 class="fh5co-intro"><span class="fh5co-border"></span>At RISE, we use to sdfjsdf ablah blah blah</h1>
@@ -118,7 +118,7 @@ DESIGNED & DEVELOPED by FREEHTML5.CO
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<!-- Slider -->
 
 				<div class="fh5co-spacer fh5co-spacer-lg"></div>
