--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@ DESIGNED & DEVELOPED by FREEHTML5.CO
 		<main role="main">
 
 				<!-- Slider -->
-				<!-- <div class="container">
+				<div class="container">
 					<div class="row">
 						<div class="col-md-8 col-md-push-4 col-sm-8 col-sm-push-4">
-							<h1 class="fh5co-intro"><span class="fh5co-border"></span>At RISE, we use to sdfjsdf ablah blah blah</h1>
+							<h1 class="fh5co-intro"><span class="fh5co-border"></span>At RISE, we leverage scientific methods to cultivate critical thinking skills, ensuring our students thrive in real-world applications.</h1>
 						</div>
 					</div>
-					<div class="row">
+					<!-- <div class="row">
 						<div class="col-md-12">
 							<div class="owl-carousel owl-carousel-fullwidth">
 						    <div class="item"><img src="images/slide_1.jpg" alt="image"></div>
@@ -117,8 +117,8 @@ DESIGNED & DEVELOPED by FREEHTML5.CO
 						    <div class="item"><img src="images/slide_4.jpg" alt="image"></div>
 							</div>
 						</div>
-					</div>
-				</div> -->
+					</div> -->
+				</div>
 				<!-- Slider -->
 
 				<div class="fh5co-spacer fh5co-spacer-lg"></div>
